# Library-Management-System

./: CMakeLists.txt  README.md  main.c
.github/workflows/: release.yml
headers/book/: book.h  library_management.h
headers/cli/: command_line_tool.h
headers/user/: user.h  user_management.h
include/book/: book_file_handling.h
include/cli/: command_line_tool.h
include/transaction/: transaction.h  transaction_file_handling.h  transaction_management.h
include/user/: user_file_handling.h
sources/book/: book.c  book_file_handling.c  library_management.c
sources/cli/: command_line_tool.c
sources/transaction/: transaction.c  transaction_file_handling.c  transaction_management.c
sources/user/: user.c  user_file_handling.c  user_management.c
